[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/nodes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menus/HoverButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/resources/env_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/nodes/ui/UIBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/levels/Game.gd" type="Script" id=6]
[ext_resource path="res://assets/resources/theme.tres" type="Theme" id=7]
[ext_resource path="res://scenes/levels/ProceduralLevel.tscn" type="PackedScene" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 0.1
glow_blend_mode = 1
glow_bicubic_upscale = true

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 4

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 3
light_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Timer" type="Label" parent="GUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = -15.0
margin_right = 42.0
margin_bottom = -2.0
theme = ExtResource( 7 )
text = "00"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChaosBar" parent="GUI" instance=ExtResource( 5 )]
margin_right = 53.0
sprite_rect_x = 83
colored = true
animation_type = 1

[node name="TimeBar" parent="GUI" instance=ExtResource( 5 )]
visible = false
margin_left = 13.0
margin_right = 53.0
animation_type = 2

[node name="Controls" type="Panel" parent="GUI"]
self_modulate = Color( 0, 0, 0, 1 )
material = SubResource( 4 )
margin_right = 80.0
margin_bottom = 24.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/Controls"]
margin_left = 0.595276
margin_top = 0.992126
margin_right = 80.5953
margin_bottom = 26.9921
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "[F] Flashlight
[E] Clean"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="Panel" parent="GUI"]
visible = false
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/PauseOverlay"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -37.0
margin_right = 37.0
margin_bottom = -26.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GUI/PauseOverlay/VBoxContainer"]
margin_right = 74.0
margin_bottom = 154.0
size_flags_vertical = 3
theme = ExtResource( 7 )
custom_fonts/font = SubResource( 2 )
text = "||"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" parent="GUI/PauseOverlay/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 130.0
margin_right = 74.0
margin_bottom = 140.0
text = "Restart level"
global_method = "restart"

[node name="QuitButton" parent="GUI/PauseOverlay/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 144.0
margin_right = 74.0
margin_bottom = 154.0
text = "Menu"
global_method = "to_menu"

[node name="BackgroundMap" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
show_collision = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 4, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 16, 5, 0, 17, 5, 0, 18, 5, 0, 19, 5, 0, 20, 5, 0, 21, 5, 0, 22, 6, 0, 65536, 7, 0, 65558, 2, 0, 131072, 7, 0, 131094, 2, 0, 196608, 7, 0, 196630, 2, 0, 262144, 7, 0, 262166, 2, 0, 327680, 7, 0, 327702, 2, 0, 393216, 7, 0, 393238, 2, 0, 458752, 7, 0, 458774, 2, 0, 524288, 7, 0, 524310, 2, 0, 589824, 7, 0, 589846, 2, 0, 655360, 7, 0, 655382, 2, 0, 720896, 7, 0, 720918, 2, 0, 786432, 7, 0, 786453, 0, 0, 786454, 2, 0, 851968, 7, 0, 851990, 2, 0, 917504, 7, 0, 917525, 0, 65536, 917526, 2, 0, 983040, 8, 0, 983041, 3, 0, 983042, 3, 0, 983043, 3, 0, 983044, 3, 0, 983045, 3, 0, 983046, 3, 0, 983047, 3, 0, 983048, 3, 0, 983049, 3, 0, 983050, 3, 0, 983051, 3, 0, 983052, 3, 0, 983053, 3, 0, 983054, 3, 0, 983055, 3, 0, 983056, 3, 0, 983057, 3, 0, 983058, 3, 0, 983059, 3, 0, 983060, 3, 0, 983061, 3, 0, 983062, 9, 0, 1048592, 0, 0, 1048593, 0, 0, 1114128, 0, 0, 1114129, 0, 0 )

[node name="ElementMap" parent="." instance=ExtResource( 8 )]
position = Vector2( 16, 16 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 56, 56 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="GooContainer" type="Node2D" parent="."]
